<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_image">Movie Image</string>
    <string name="popular_filter">popular</string>
    <string name="top_rated_filter">top_rated</string>
    <string name="movie_cover">Movie Cover</string>
    <string name="john_wick">John Wick</string>
    <string name="overview_label">Overview</string>
    <string name="overview_text">Ex-hitman John Wick comes out of retirement to track down the gangsters that took everything from him.</string>
    <string name="release_date">Release Date</string>
    <string name="user_count">User Count</string>
    <string name="user_rating">User rating</string>
    <string name="share">Share</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="vote_count">Vote Count</string>
    <string name="movie_details">Movie Details</string>
    <string name="favorite_clicked">Favorite Clicked!</string>
    <string name="share_clicked">Share Clicked!</string>
    <string name="trailers_label">Trailers</string>
    <string name="play_youtube_video">Play Youtube Video</string>
    <string name="share_using">Share using:</string>
    <string name="movie_sharing">\"Check out this movie:\" </string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="favorites">Favorites</string>
    <string name="reviews_label">Reviews</string>
    <string name="youtube_app_name">com.google.android.youtube</string>
    <string name="add_to_favorites">Added to Favorites!</string>
    <string name="remove_from_favorites">Removed from Favorites!</string>
    <string name="favorites_filter">favorites_filter</string>
    <string name="cant_share_from_favorites">Can\'t share from favorites</string>
    <string name="try_again_share">Try again when connected to the internet!</string>
</resources>
