<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.detail.DetailActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/movie_cover"
                        android:layout_width="0dp"
                        android:layout_height="250dp"
                        android:contentDescription="@string/movie_cover"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/test_cover" />

                    <ImageView
                        android:id="@+id/movie_poster"
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/movie_image"
                        app:layout_constraintBottom_toBottomOf="@+id/movie_cover"
                        app:layout_constraintDimensionRatio="w,2:3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_cover"
                        app:srcCompat="@drawable/test_image" />

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="@android:style/TextAppearance.Material.Title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/movie_poster"
                        app:layout_constraintTop_toBottomOf="@+id/movie_cover"
                        tools:text="@string/john_wick" />

                    <TextView
                        android:id="@+id/release_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintBaseline_toBaselineOf="@+id/user_rating_count"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/user_rating_count"
                        tools:text="2014-10-22" />

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintEnd_toStartOf="@+id/user_rating_count"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/movie_poster"
                        tools:text="7.1" />

                    <TextView
                        android:id="@+id/user_rating_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintBaseline_toBaselineOf="@+id/movie_rating"
                        app:layout_constraintEnd_toStartOf="@+id/release_date_text"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/movie_rating"
                        tools:text="2762" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/release_date"
                        app:layout_constraintEnd_toEndOf="@+id/release_date_text"
                        app:layout_constraintStart_toStartOf="@+id/release_date_text"
                        app:layout_constraintTop_toBottomOf="@+id/release_date_text"
                        app:srcCompat="@drawable/ic_access_time_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView6"
                        app:layout_constraintStart_toStartOf="@+id/imageView6"
                        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="@+id/user_rating_count"
                        app:layout_constraintStart_toStartOf="@+id/user_rating_count"
                        app:layout_constraintTop_toBottomOf="@+id/user_rating_count"
                        app:srcCompat="@drawable/ic_group_black_24dp"
                        android:contentDescription="@string/user_count" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vote_count"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/imageView7"
                        app:layout_constraintStart_toStartOf="@+id/imageView7"
                        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/user_rating"
                        app:layout_constraintEnd_toEndOf="@+id/movie_rating"
                        app:layout_constraintStart_toStartOf="@+id/movie_rating"
                        app:layout_constraintTop_toBottomOf="@+id/movie_rating"
                        app:srcCompat="@drawable/ic_star_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_rating"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView8"
                        app:layout_constraintStart_toStartOf="@+id/imageView8"
                        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="16dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview_label"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/overview_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text="@string/overview_text" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>